embedded video added

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
     <div class="videos">
         <section class="video-section">
             <article class="video-container">
-                <a href="#" class="thumbnail" video-duration="15:00">
-                    <img class="thumbnail-image" src="http://unsplash.it/250/150?gravity=center" />
+                <a href="#" class="thumbnail" >
+                    <iframe width="250" height="150" src="https://www.youtube.com/embed/KieWRYagJuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    
                 </a>
                 <div class="video-bottom-section">
                     <a href="#">
